<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_dolbyio_splash_screen"
    android:orientation="vertical"
    tools:context="com.dolbyio.podcast_reference_app.activity.PodcastSessionActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_host"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_16_dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/margin_16_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.voxeet.sdk.views.VideoView
            android:id="@+id/video_host"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_16_dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_video_host"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/host_video_off"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_other_host"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_16_dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/margin_16_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_host">

        <com.voxeet.sdk.views.VideoView
            android:id="@+id/video_other_host"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_16_dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_other_video_host"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/other_host_video_off"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_participants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_12_dp"
        android:text="@string/participants"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_other_host" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_mic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/mute_mic"
        android:src="@drawable/ic_baseline_mic_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fab_video"
        app:layout_constraintStart_toEndOf="@+id/fab_recording" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_end_podcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/end_podcast"
        android:src="@drawable/ic_baseline_call_end_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fab_video" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/record_audio_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fab_mic"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_record_voice_over_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/record_conference_audio_floating_action_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fab_end_podcast"
        app:layout_constraintStart_toEndOf="@+id/fab_mic"
        app:srcCompat="@drawable/ic_baseline_videocam_24">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>
</androidx.constraintlayout.widget.ConstraintLayout>